fixed the size of the title on mobile

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -12,3 +12,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.title {
+  font-size: 6rem;
+}
+
+@media (max-width: 1250px) {
+  .title {
+    font-size: 5rem;
+  }
+}
